--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@langchain/community": "^1.1.0",
     "@langchain/core": "^1.1.5",
+    "@langchain/mongodb": "^1.1.0",
     "@langchain/ollama": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -20,6 +21,7 @@
     "hnswlib-node": "^3.0.0",
     "langchain": "^1.2.0",
     "lucide-react": "^0.561.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
