--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^7.0.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "sonner": "^2.0.7",
