--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hnswlib-node": "^3.0.0",
+    "ignore": "^7.0.5",
     "langchain": "^1.2.0",
     "lucide-react": "^0.561.0",
     "mongodb": "^7.0.0",
