--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rag-agent",
+  "name": "rag-agent-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@langchain/community": "^1.1.0",
-    "@langchain/core": "^1.1.5",
-    "@langchain/mongodb": "^1.1.0",
-    "@langchain/ollama": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
-    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hnswlib-node": "^3.0.0",
+    "framer-motion": "^12.23.26",
     "ignore": "^7.0.5",
-    "langchain": "^1.2.0",
     "lucide-react": "^0.561.0",
-    "mongodb": "^7.0.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^1.1.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "sonner": "^2.0.7",
