--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "@langchain/textsplitters": "^1.0.1",
         "@types/bcryptjs": "^2.4.6",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/socket.io": "^3.0.1",
         "bcryptjs": "^3.0.3",
         "cheerio": "^1.1.2",
         "cors": "^2.8.5",
@@ -28,7 +29,9 @@
         "langchain": "^1.2.0",
         "mongodb": "^7.0.0",
         "multer": "^1.4.5-lts.1",
-        "pdf-parse": "^1.1.1"
+        "pdf-parse": "^1.1.1",
+        "playwright": "^1.57.0",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
