--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/socket.io": "^3.0.1",
+        "axios": "^1.13.2",
         "bcryptjs": "^3.0.3",
         "cheerio": "^1.1.2",
         "cors": "^2.8.5",
